--- a/bundle/manifests/lightspeed-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/lightspeed-operator.clusterserviceversion.yaml
@@ -40,8 +40,10 @@ metadata:
     createdAt: "2024-02-24T13:31:26Z"
     operators.operatorframework.io/builder: operator-sdk-v1.33.0
     operators.operatorframework.io/project_layout: go.kubebuilder.io/v4
-  name: lightspeed-operator.v0.0.0
-  namespace: placeholder
+    operatorframework.io/cluster-monitoring: "true"
+    operatorframework.io/suggested-namespace: openshift-lightspeed
+  name: lightspeed-operator.v0.0.32
+  namespace: openshift-lightspeed
 spec:
   apiservicedefinitions: {}
   customresourcedefinitions:
@@ -184,7 +186,7 @@ spec:
                   valueFrom:
                     fieldRef:
                       fieldPath: metadata.annotations['olm.targetNamespaces']
-                image: quay.io/openshift/lightspeed-operator:latest
+                image: quay.io/openshift/lightspeed-operator@sha256:c27acc1d6db151d9f463c8e0936356724f3e57cee4f358b82478b056b6b61377
                 livenessProbe:
                   httpGet:
                     path: /healthz
@@ -293,4 +295,4 @@ spec:
   provider:
     name: Red Hat, Inc
     url: https://github.com/openshift/lightspeed-service
-  version: 0.0.0
+  version: 0.0.32
