--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -4,5 +4,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
 - name: controller
-  newName: quay.io/openshift/lightspeed-operator
-  newTag: latest
+  newName: quay.io/xrajesh/lightspeed-operator
+  newTag: 0.0.43
